--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Apr 12 02:13:29 TRT 2024
-sdk.dir=/Users/alpersalli/Library/Android/sdk
+#Sun Apr 21 20:33:27 TRT 2024
+sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
